# packages/shared/src/types/nutrition.ts
@@ -1,8 +1,0 @@
-export type Sugars = {
-  sucrose: number;
-  fructose: number;
-  glucose: number;
-  dextrose: number;
-  alcohol: number;
-  other: number;
-};
